# base-projeto-fastapi

./: README.md  main.py  pyproject.toml
